--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
                 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
                 <script src="https://cdn.jsdelivr.net/npm/web3@1.7.5/dist/web3.min.js"></script>
                 <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.6.6/dist/umd/index.min.js"></script>
-                <script src="config.js"></script>
+                <script src="configu.js"></script>
                 <script src="js/bscscan.js"></script>
                 <!-- script -->
 
