--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NEFTE</title>
     <link rel="stylesheet" href="css/output.css" />
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/logo/BNB MULTIPLIER favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
@@ -45,12 +45,8 @@
                 <div class="w-full max-w-7xl mx-auto flex justify-between items-center gap-5 sm:gap-0 py-4 xl:px-0">
                     <div class="flex items-center gap-8 xl:pl-2">
                         <a href="index.html" class="flex-shrink-0">
-                            <svg class="w-36 text-primary" viewBox="0 0 101 27" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M23 9.5L14 4.5L5 9.5V19.5L14 24.5L23 19.5V9.5ZM14 6.79L19.91 10.07L16.9 11.74C16.17 10.98 15.14 10.5 14 10.5C12.86 10.5 11.83 10.98 11.1 11.74L8.09 10.07L14 6.79ZM13 21.66L7 18.33V11.76L10.13 13.5C10.04 13.81 10 14.15 10 14.5C10 16.36 11.27 17.93 13 18.37V21.66ZM12 14.5C12 13.4 12.9 12.5 14 12.5C15.1 12.5 16 13.4 16 14.5C16 15.6 15.1 16.5 14 16.5C12.9 16.5 12 15.6 12 14.5ZM15 21.66V18.38C16.73 17.94 18 16.37 18 14.51C18 14.16 17.96 13.82 17.87 13.5L21 11.76V18.33L15 21.66Z"
-                                fill="currentColor" />
-                                <path d="M31.9045 21.1828C30.9295 21.1828 30.4421 20.675 30.4421 19.6595V8.08228C30.4421 7.56774 30.5639 7.17506 30.8077 6.90425C31.0649 6.63344 31.4035 6.49803 31.8232 6.49803C32.1753 6.49803 32.4528 6.5725 32.656 6.72145C32.8591 6.85686 33.0893 7.08705 33.3465 7.41202L39.9273 15.8004V8.00104C39.9273 6.99903 40.4147 6.49803 41.3896 6.49803C42.3646 6.49803 42.852 6.99903 42.852 8.00104V19.7204C42.852 20.1673 42.7369 20.5261 42.5067 20.7969C42.2765 21.0542 41.9651 21.1828 41.5724 21.1828C41.1933 21.1828 40.8886 21.1083 40.6584 20.9594C40.4418 20.8104 40.2048 20.5735 39.9476 20.2485L33.3668 11.8601V19.6595C33.3668 20.675 32.8794 21.1828 31.9045 21.1828ZM47.3799 21C46.2831 21 45.7347 20.4516 45.7347 19.3548V8.32601C45.7347 7.22922 46.2831 6.68083 47.3799 6.68083H54.4684C55.2944 6.68083 55.7074 7.08705 55.7074 7.89948C55.7074 8.72546 55.2944 9.13844 54.4684 9.13844H48.7407V12.4897H54.0013C54.8408 12.4897 55.2605 12.9027 55.2605 13.7287C55.2605 14.5547 54.8408 14.9677 54.0013 14.9677H48.7407V18.5424H54.4684C55.2944 18.5424 55.7074 18.9486 55.7074 19.761C55.7074 20.587 55.2944 21 54.4684 21H47.3799ZM59.6369 21.1828C59.1224 21.1828 58.7229 21.0406 58.4386 20.7563C58.1677 20.4719 58.0323 20.0589 58.0323 19.5173V8.32601C58.0323 7.22922 58.5807 6.68083 59.6775 6.68083H66.6238C67.4498 6.68083 67.8628 7.08705 67.8628 7.89948C67.8628 8.72546 67.4498 9.13844 66.6238 9.13844H61.1805V12.6319H66.177C67.0165 12.6319 67.4363 13.0381 67.4363 13.8506C67.4363 14.6765 67.0165 15.0895 66.177 15.0895H61.1805V19.5173C61.1805 20.6276 60.666 21.1828 59.6369 21.1828ZM74.8504 21.1828C74.3358 21.1828 73.9432 21.0406 73.6724 20.7563C73.4015 20.4719 73.2661 20.0725 73.2661 19.5579V9.28062H69.6711C68.791 9.28062 68.3509 8.84732 68.3509 7.98072C68.3509 7.11413 68.791 6.68083 69.6711 6.68083H80.0093C80.8895 6.68083 81.3296 7.11413 81.3296 7.98072C81.3296 8.84732 80.8895 9.28062 80.0093 9.28062H76.4143V19.5579C76.4143 20.0725 76.2789 20.4719 76.0081 20.7563C75.7508 21.0406 75.3649 21.1828 74.8504 21.1828ZM84.3322 21C83.2354 21 82.6871 20.4516 82.6871 19.3548V8.32601C82.6871 7.22922 83.2354 6.68083 84.3322 6.68083H91.4207C92.2467 6.68083 92.6597 7.08705 92.6597 7.89948C92.6597 8.72546 92.2467 9.13844 91.4207 9.13844H85.6931V12.4897H90.9536C91.7931 12.4897 92.2129 12.9027 92.2129 13.7287C92.2129 14.5547 91.7931 14.9677 90.9536 14.9677H85.6931V18.5424H91.4207C92.2467 18.5424 92.6597 18.9486 92.6597 19.761C92.6597 20.587 92.2467 21 91.4207 21H84.3322Z"
-                                fill="currentColor" />
-                            </svg>
+
+                           <img src="/img/logo/BNB MULTIPLIER Logo.png" style="width: 200px;" alt="">
                         </a>
                         <!-- search -->
                         <!-- <div class="hidden xl:flex">
@@ -58,66 +54,6 @@
 						</div> -->
                         <!-- search end -->
                     </div>
-
-
-                    <!-- <ul class="hidden lg:flex gap-5 items-center font-semibold space-x-6 lg:space-x-2 xl:space-x-3">
-                        <li class="group relative">
-                            <a href="index.html" class="p-4 group-hover:text-primary transition">Home</a>
-                            <ul class="bg-white shadow rounded-lg opacity-0 invisible text-gray-700 group-hover:opacity-100 group-hover:visible hover:transition-all duration-300 mt-4 group-hover:mt-0 absolute left-0 top-10 w-52 p-4 space-y-3">
-                                <li class="hover:ml-2 duration-500 transition-all rounded-lg p-2">
-                                    <a href="index.html" class="hover:text-primary transition"> Home page 1 </a>
-                                </li>
-                                <li class="hover:ml-2 duration-500 transition-all rounded-lg p-2">
-                                    <a href="home-2.html" class="hover:text-primary transition"> Home page 2 </a>
-                                </li>
-                                <li class="hover:ml-2 duration-500 transition-all rounded-lg p-2">
-                                    <a href="home-3.html" class="hover:text-primary transition"> Home page 3 </a>
-                                </li>
-                            </ul>
-                        </li>
-
-                        <li>
-                            <a href="explore.html" class="hover:text-primary transition">Explore</a>
-                        </li>
-
-                        <li class="group relative">
-                            <a href="#" class="p-4 group-hover:text-primary transition">Pages</a>
-                            <ul class="bg-white shadow rounded-lg opacity-0 invisible text-gray-700 group-hover:opacity-100 group-hover:visible hover:transition-all duration-300 mt-4 group-hover:mt-0 absolute left-0 top-10 w-48 p-4 space-y-1">
-                                <li class="text-sm hover:text-primary hover:ml-2 duration-500 transition-all rounded-lg p-2">
-                                    <a href="author-profile.html">Author Profile</a>
-                                </li>
-                                <li class="text-sm hover:text-primary hover:ml-2 duration-500 transition-all rounded-lg p-2">
-                                    <a href="about.html">About Us</a>
-                                </li>
-                                <li class="text-sm hover:text-primary hover:ml-2 duration-500 transition-all rounded-lg p-2">
-                                    <a href="activity.html">Activity</a>
-                                </li>
-                                <li class="text-sm hover:text-primary hover:ml-2 duration-500 transition-all rounded-lg p-2">
-                                    <a href="ranking.html">Ranking</a>
-                                </li>
-                                <li class="text-sm hover:text-primary hover:ml-2 duration-500 transition-all rounded-lg p-2">
-                                    <a href="wallet.html">Wallet</a>
-                                </li>
-                                <li class="text-sm hover:text-primary hover:ml-2 duration-500 transition-all rounded-lg p-2">
-                                    <a href="blog.html">Blog</a>
-                                </li>
-                                <li class="text-sm hover:text-primary hover:ml-2 duration-500 transition-all rounded-lg p-2">
-                                    <a href="blog-view.html"> Blog View</a>
-                                </li>
-                                <li class="text-sm hover:text-primary hover:ml-2 duration-500 transition-all rounded-lg p-2">
-                                    <a href="login.html">Login</a>
-                                </li>
-                                <li class="text-sm hover:text-primary hover:ml-2 duration-500 transition-all rounded-lg p-2">
-                                    <a href="register.html">Register</a>
-                                </li>
-                                <li class="text-sm hover:text-primary hover:ml-2 duration-500 transition-all rounded-lg p-2">
-                                    <a href="upload-enfty.html">Upload Enfty</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="contact.html" class="hover:text-primary transition">Contact</a>
-                        </li> -->
 
                         <div class="hidden lg:flex items-center gap-4 xl:gap-8">
 							<a class="header-btn" href="">Smart Contract</a>
@@ -168,12 +104,7 @@
                     <div class="w-80 h-full overflow-y-auto bg-white p-5 relative">
                         <div id="close-menu" class="absolute top-5 right-5 text-2xl cursor-pointer"><i class="las la-times-circle"></i></div>
                         <a href="index.html" class="">
-                            <svg class="w-24 text-primary" viewBox="0 0 101 27" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M23 9.5L14 4.5L5 9.5V19.5L14 24.5L23 19.5V9.5ZM14 6.79L19.91 10.07L16.9 11.74C16.17 10.98 15.14 10.5 14 10.5C12.86 10.5 11.83 10.98 11.1 11.74L8.09 10.07L14 6.79ZM13 21.66L7 18.33V11.76L10.13 13.5C10.04 13.81 10 14.15 10 14.5C10 16.36 11.27 17.93 13 18.37V21.66ZM12 14.5C12 13.4 12.9 12.5 14 12.5C15.1 12.5 16 13.4 16 14.5C16 15.6 15.1 16.5 14 16.5C12.9 16.5 12 15.6 12 14.5ZM15 21.66V18.38C16.73 17.94 18 16.37 18 14.51C18 14.16 17.96 13.82 17.87 13.5L21 11.76V18.33L15 21.66Z"
-                                fill="currentColor" />
-                                <path d="M31.9045 21.1828C30.9295 21.1828 30.4421 20.675 30.4421 19.6595V8.08228C30.4421 7.56774 30.5639 7.17506 30.8077 6.90425C31.0649 6.63344 31.4035 6.49803 31.8232 6.49803C32.1753 6.49803 32.4528 6.5725 32.656 6.72145C32.8591 6.85686 33.0893 7.08705 33.3465 7.41202L39.9273 15.8004V8.00104C39.9273 6.99903 40.4147 6.49803 41.3896 6.49803C42.3646 6.49803 42.852 6.99903 42.852 8.00104V19.7204C42.852 20.1673 42.7369 20.5261 42.5067 20.7969C42.2765 21.0542 41.9651 21.1828 41.5724 21.1828C41.1933 21.1828 40.8886 21.1083 40.6584 20.9594C40.4418 20.8104 40.2048 20.5735 39.9476 20.2485L33.3668 11.8601V19.6595C33.3668 20.675 32.8794 21.1828 31.9045 21.1828ZM47.3799 21C46.2831 21 45.7347 20.4516 45.7347 19.3548V8.32601C45.7347 7.22922 46.2831 6.68083 47.3799 6.68083H54.4684C55.2944 6.68083 55.7074 7.08705 55.7074 7.89948C55.7074 8.72546 55.2944 9.13844 54.4684 9.13844H48.7407V12.4897H54.0013C54.8408 12.4897 55.2605 12.9027 55.2605 13.7287C55.2605 14.5547 54.8408 14.9677 54.0013 14.9677H48.7407V18.5424H54.4684C55.2944 18.5424 55.7074 18.9486 55.7074 19.761C55.7074 20.587 55.2944 21 54.4684 21H47.3799ZM59.6369 21.1828C59.1224 21.1828 58.7229 21.0406 58.4386 20.7563C58.1677 20.4719 58.0323 20.0589 58.0323 19.5173V8.32601C58.0323 7.22922 58.5807 6.68083 59.6775 6.68083H66.6238C67.4498 6.68083 67.8628 7.08705 67.8628 7.89948C67.8628 8.72546 67.4498 9.13844 66.6238 9.13844H61.1805V12.6319H66.177C67.0165 12.6319 67.4363 13.0381 67.4363 13.8506C67.4363 14.6765 67.0165 15.0895 66.177 15.0895H61.1805V19.5173C61.1805 20.6276 60.666 21.1828 59.6369 21.1828ZM74.8504 21.1828C74.3358 21.1828 73.9432 21.0406 73.6724 20.7563C73.4015 20.4719 73.2661 20.0725 73.2661 19.5579V9.28062H69.6711C68.791 9.28062 68.3509 8.84732 68.3509 7.98072C68.3509 7.11413 68.791 6.68083 69.6711 6.68083H80.0093C80.8895 6.68083 81.3296 7.11413 81.3296 7.98072C81.3296 8.84732 80.8895 9.28062 80.0093 9.28062H76.4143V19.5579C76.4143 20.0725 76.2789 20.4719 76.0081 20.7563C75.7508 21.0406 75.3649 21.1828 74.8504 21.1828ZM84.3322 21C83.2354 21 82.6871 20.4516 82.6871 19.3548V8.32601C82.6871 7.22922 83.2354 6.68083 84.3322 6.68083H91.4207C92.2467 6.68083 92.6597 7.08705 92.6597 7.89948C92.6597 8.72546 92.2467 9.13844 91.4207 9.13844H85.6931V12.4897H90.9536C91.7931 12.4897 92.2129 12.9027 92.2129 13.7287C92.2129 14.5547 91.7931 14.9677 90.9536 14.9677H85.6931V18.5424H91.4207C92.2467 18.5424 92.6597 18.9486 92.6597 19.761C92.6597 20.587 92.2467 21 91.4207 21H84.3322Z"
-                                fill="currentColor" />
-                            </svg>
+                            <img src="/img/logo/BNB MULTIPLIER Logo.png" style="width: 150px;" alt="">
                         </a>
 
 
@@ -197,7 +128,7 @@
 
                         Basic interest rate: 1% every 24 hrs (+0,1041% hourly) Personal hold-bonus: +0.1% for every 24 hrs without withdraw Contract total amount bonus: +0.1% for every 500 BNB on platform address balance.</p>
                     <div class="flex gap-8 mt-8">
-                        <a href="" class="bg-primary hover:bg-primary-dark hover:text-white transition duration-500 text-white rounded-lg px-8 py-3 inline-block">Presentation</a>
+                        <a href="/BNB MULTIPLIER PPT.pdf" class="bg-primary hover:bg-primary-dark hover:text-white transition duration-500 text-white rounded-lg px-8 py-3 inline-block">Presentation</a>
 
                     </div>
                 </div>
@@ -510,7 +441,7 @@
                                 <a href="#" class="col-span-4 sm:col-span-2 md:col-span-1 shadow rounded-lg p-6 md:p-4 lg:p-6 group hover:bg-blue-500 hover:text-white transition-all duration-300">
 
                                     <p class="category">2 LVL</p>
-                                    <h2 class=" category text-black flex justify-between mt-6">4% <span class="category">0</span></h2>
+                                    <h2 class=" category text-black flex justify-between mt-6">3% <span class="category">0</span></h2>
 
                                 </a>
 
@@ -518,7 +449,7 @@
                                 <a class="col-span-4 sm:col-span-2 md:col-span-1 shadow rounded-lg p-6 md:p-4 lg:p-6 group hover:bg-primary-dark hover:text-white transition-all duration-300">
 
                                     <p class="category">3 LVL</p>
-                                    <h2 class=" category flex justify-between mt-6 hover:bg-primary-dark hover:text-white ">3% <span class="category">0</span></h2>
+                                    <h2 class=" category flex justify-between mt-6 hover:bg-primary-dark hover:text-white ">2% <span class="category">0</span></h2>
 
                                 </a>
 
@@ -526,7 +457,7 @@
                                 <a class="col-span-4 sm:col-span-2 md:col-span-1 shadow rounded-lg p-6 md:px-2 md:py-5 lg:p-6 group hover:bg-secondary hover:text-white transition-all duration-300">
 
                                     <p class="category">4 LVL</p>
-                                    <h2 class=" category text-black flex justify-between mt-6">3% <span class="category">0</span></h2>
+                                    <h2 class=" category text-black flex justify-between mt-6">2% <span class="category">0</span></h2>
 
                                 </a>
 
@@ -534,7 +465,7 @@
                                 <a class="col-span-4 sm:col-span-2 md:col-span-1 shadow rounded-lg p-6 md:px-2 md:py-5 lg:p-6 group hover:bg-orange-500 hover:text-white transition-all duration-300">
 
                                     <p class="category">5 LVL</p>
-                                    <h2 class=" category text-black flex justify-between mt-6">2% <span class="category">0</span></h2>
+                                    <h2 class=" category text-black flex justify-between mt-6">1% <span class="category">0</span></h2>
 
                                 </a>
                             </div>
